<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_nav_camera"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/navigation_records"
        android:icon="@drawable/ic_nav_records"
        android:title="@string/nav_records" />
    <item
        android:id="@+id/navigation_security"
        android:icon="@drawable/ic_nav_security"
        android:title="@string/nav_security" />
    <item
        android:id="@+id/navigation_updates"
        android:icon="@drawable/ic_nav_update"
        android:title="@string/nav_updates" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
